// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFacetGroup is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiFacetGroup testClass1 testClass2 emotion-euiFacetGroup-m-vertical"
  data-test-subj="test subject string"
/>
`;

exports[`EuiFacetGroup props gutterSize l is rendered 1`] = `
<div
  class="euiFacetGroup emotion-euiFacetGroup-l-vertical"
/>
`;

exports[`EuiFacetGroup props gutterSize m is rendered 1`] = `
<div
  class="euiFacetGroup emotion-euiFacetGroup-m-vertical"
/>
`;

exports[`EuiFacetGroup props gutterSize none is rendered 1`] = `
<div
  class="euiFacetGroup emotion-euiFacetGroup-none-vertical"
/>
`;

exports[`EuiFacetGroup props gutterSize s is rendered 1`] = `
<div
  class="euiFacetGroup emotion-euiFacetGroup-s-vertical"
/>
`;

exports[`EuiFacetGroup props layout horizontal is rendered 1`] = `
<div
  class="euiFacetGroup emotion-euiFacetGroup-m-horizontal"
/>
`;

exports[`EuiFacetGroup props layout vertical is rendered 1`] = `
<div
  class="euiFacetGroup emotion-euiFacetGroup-m-vertical"
/>
`;
